--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,85 +1,90 @@
 ---
-import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
+import HeaderLink from "./HeaderLink.astro";
+import { SITE_TITLE } from "../consts";
 ---
 
 <header>
-	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
-		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
-		</div>
-		<div class="social-links">
-			<a href="https://m.webtoo.ls/@astro" target="_blank">
-				<span class="sr-only">Follow Astro on Mastodon</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-					><path
-						fill="currentColor"
-						d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a3.614 3.614 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522c0-.859.22-1.541.66-2.046.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764.442.505.661 1.187.661 2.046v4.203z"
-					></path></svg
-				>
-			</a>
-			<a href="https://twitter.com/astrodotbuild" target="_blank">
-				<span class="sr-only">Follow Astro on Twitter</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-					><path
-						fill="currentColor"
-						d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-					></path></svg
-				>
-			</a>
-			<a href="https://github.com/withastro/astro" target="_blank">
-				<span class="sr-only">Go to Astro's GitHub repo</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-					><path
-						fill="currentColor"
-						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-					></path></svg
-				>
-			</a>
-		</div>
-	</nav>
+  <nav>
+    <h2>
+      <a href="/"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="306.559"
+          height="79.43"
+          viewBox="84.22 104.88 306.559 79.43"
+          ><title>{SITE_TITLE}</title><path
+            fill="transparent"
+            d="M84.22 104.88h306.559v79.43H84.22z"></path><path
+            fill="#293437"
+            d="M217.822 130.33v2.991l-2.04.255-5.015 21.505h-4.607l-4.54-16.337h-.101l-4.54 16.337h-4.606l-5.05-21.505-2.022-.255v-2.992h9.112v2.992l-2.261.391 2.839 13.566.102.017 4.64-16.966h3.656l4.675 16.966.102-.017 2.822-13.566-2.261-.39v-2.993h9.095Zm1.598 24.751v-2.975l2.38-.51V140.19l-2.635-.51v-2.992h7.259l.22 2.686q.647-1.428 1.667-2.227 1.02-.799 2.363-.799.39 0 .824.06.434.06.723.144l-.527 4.522-2.04-.05q-1.088 0-1.802.424-.714.425-1.088 1.207v8.942l2.38.51v2.975h-9.724Zm14.127 0v-2.975l2.397-.51V140.19l-2.652-.51v-2.992h7.616v14.91l2.38.51v2.974h-9.741Zm7.36-26.52v3.723h-4.963v-3.723h4.964Zm6.393 3.621h4.947v4.505h3.23v3.485h-3.23v9.367q0 1.071.442 1.53.442.46 1.19.46.51 0 .892-.043.383-.043.859-.145l.425 3.587q-.833.255-1.65.383-.815.127-1.767.127-2.567 0-3.953-1.41-1.385-1.412-1.385-4.472v-9.384h-2.703v-3.485h2.703v-4.505Zm19.414 23.256q-3.978 0-6.358-2.55-2.38-2.55-2.38-6.477v-.68q0-4.097 2.252-6.749 2.253-2.652 6.044-2.635 3.723 0 5.78 2.244 2.057 2.244 2.057 6.07v2.702h-10.982l-.034.102q.136 1.82 1.215 2.992 1.08 1.173 2.933 1.173 1.649 0 2.737-.331 1.088-.332 2.38-1.046l1.343 3.06q-1.14.901-2.95 1.513-1.81.612-4.037.612Zm-.442-15.266q-1.377 0-2.176 1.054-.8 1.054-.986 2.771l.05.085h6.087v-.442q0-1.58-.74-2.524t-2.235-.944Zm18.41 8.245q0-2.006 1.106-3.459 1.105-1.454 3.366-3.035-1.156-1.564-1.726-2.856-.57-1.292-.57-2.635 0-2.94 1.837-4.7 1.836-1.76 4.913-1.76 2.703 0 4.394 1.675 1.692 1.674 1.692 4.054 0 1.666-.833 3.043-.833 1.377-2.278 2.414l-1.581 1.122 4.692 5.474q.612-1.02.952-2.21.34-1.19.34-2.516h3.706q0 2.346-.578 4.318-.578 1.972-1.768 3.502l3.536 4.148-.034.085h-5.508l-1.31-1.513q-1.444.935-2.974 1.403-1.53.467-3.281.467-3.706 0-5.9-1.946-2.192-1.947-2.192-5.075Zm8.348 3.213q.9 0 1.802-.229.9-.23 1.734-.689l-5.1-5.916-.323.221q-.867.816-1.182 1.59-.314.773-.314 1.555 0 1.513.935 2.491.935.977 2.448.977Zm-1.734-15.249q0 .731.365 1.505.366.773 1.097 1.708l1.462-.952q.952-.612 1.283-1.258.332-.646.332-1.41 0-.85-.621-1.514-.62-.663-1.623-.663-1.105 0-1.7.74t-.595 1.844Zm26.469-2.55-2.635-.51v-2.992h10.25v2.992l-2.651.51v7.14h10.098v-7.14l-2.652-.51v-2.992H340.426v2.992l-2.652.51v17.765l2.652.51v2.975h-10.251v-2.975l2.652-.51v-6.8h-10.098v6.8l2.652.51v2.975H315.13v-2.975l2.635-.51v-17.765Zm24.548 21.25v-2.975l2.397-.51V140.19l-2.652-.51v-2.992h7.616v14.91l2.38.51v2.974h-9.741Zm7.36-26.52v3.723h-4.963v-3.723h4.964Zm6.138 3.502-2.652-.51v-2.992h7.599v15.368h1.105l2.856-4.029-1.615-.22v-2.993h9.044v2.992l-2.176.493-3.315 4.556 4.64 6.987 1.888.391v2.975h-8.5v-2.975l1.02-.17-2.822-4.556h-2.125v4.216l2.142.51v2.975h-9.486v-2.975l2.397-.51v-19.533Zm27.574 23.375q-3.978 0-6.358-2.55-2.38-2.55-2.38-6.477v-.68q0-4.097 2.252-6.749 2.253-2.652 6.044-2.635 3.723 0 5.78 2.244 2.057 2.244 2.057 6.07v2.702h-10.982l-.034.102q.136 1.82 1.215 2.992 1.08 1.173 2.933 1.173 1.649 0 2.737-.331 1.088-.332 2.38-1.046l1.343 3.06q-1.14.901-2.95 1.513-1.81.612-4.037.612Zm-.442-15.266q-1.377 0-2.176 1.054-.8 1.054-.986 2.771l.05.085h6.087v-.442q0-1.58-.74-2.524t-2.235-.944Z"
+          ></path><g transform="translate(55.3 62)"
+            ><path
+              fill="#84ad8d"
+              d="M115.84 70.12A27.24 27.24 0 1 1 88.6 42.88a27.23 27.23 0 0 1 27.24 27.24Z"
+            ></path><path
+              fill="#293437"
+              d="M98.27 63.93a2.51 2.51 0 0 0-.27-1.15 2.47 2.47 0 0 0-.85-.85s0-.07-.09-.09L64.87 43.28a2.53 2.53 0 0 0-2.55 0L30.16 61.84s-.05.07-.09.09a2.44 2.44 0 0 0-.84.85 2.51 2.51 0 0 0-.31 1.15s0 .08 0 .12v37.13a2.54 2.54 0 0 0 1.27 2.21L62.32 122h.12a2.5 2.5 0 0 0 1.15.31 2.57 2.57 0 0 0 1.16-.31s.08 0 .12 0L97 103.39a2.55 2.55 0 0 0 1.28-2.21V64.05s-.01-.05-.01-.12Zm-5.08 21.89c-4 4.66-6.43 12-6.71 17.77l-10.75 6.2c8-11 11.54-22.36 11.73-38l5.73-3.32Zm-52.64 17.67a11.35 11.35 0 0 1-.27-2.67c0-1.22.22-3 .41-5 .22-2.28.45-4.64.45-6.16 0-6.89-2.33-8.87-4.79-11A18.6 18.6 0 0 1 34 76.44v-8l10.53 6.08a18 18 0 0 0 .75 9.5 21 21 0 0 0 1.21 2.58 12.71 12.71 0 0 1 1.38 3.4 12.89 12.89 0 0 1 0 3.92c-.07.61-.13 1.23-.16 1.84a11.09 11.09 0 0 0 2.68 8c2 2.09 4.92 3.14 8.72 3.14a13.86 13.86 0 0 0 1.95-.17v8.62Zm7.73-46.22a15.32 15.32 0 0 0 6.19 1.28 25.61 25.61 0 0 0 9.22-2c5.48-2.13 9-1.94 11.58-1.41l9.78 5.64c.16 2.16.28 4.26.34 6.26l-5.93 3.43C78 65.85 74.18 61.35 65 61.35a28.48 28.48 0 0 0-8 1c-4.34 1.23-8.53 4-10.66 7.17a1.19 1.19 0 0 1-.08.16l-9.78-5.65Zm39.1 8.67c0-1.27-.11-2.56-.19-3.88l3.45 2Zm-37.51 23.6a14.64 14.64 0 0 0-1.58-3.86 19.77 19.77 0 0 1-1.11-2.34 16.12 16.12 0 0 1-.81-7.72l6.18 3.57v.44c0 11.11 4.33 17.19 8.52 17.48v7.55a12.4 12.4 0 0 1-1.95.18c-3.22 0-5.66-.84-7.24-2.51a9 9 0 0 1-2.12-6.52c0-.58.09-1.16.15-1.73a14.71 14.71 0 0 0-.04-4.54ZM69.9 82c0 2-.75 7.8-3.76 11v-8.91l3.76-2.17Zm-6.31-2.33-8-4.62a6.26 6.26 0 0 1 5.67-3.91c4.34 0 6.5 2.77 7.58 5.51ZM61 84.09v11c-2.74-.35-6.26-5.42-6.45-14.68Zm5.1 11.6c4.61-3.17 5.8-10.63 5.8-13.69 0-.37 0-.8-.07-1.21l6.39-3.7c-.18 7.66-4.4 20.39-12.12 25.5Zm4.48-20.08c-1.44-3.42-4.26-6.51-9.37-6.51a8.28 8.28 0 0 0-7.4 4.9l-5.73-3.32c1.85-2.71 5.68-5.27 9.53-6.36a26.76 26.76 0 0 1 7.39-.93c8 0 11.35 3.8 12.61 8.18ZM66.14 105c9.34-5.15 14.19-19.86 14.19-28.49v-.63L85.41 73c-.34 16.16-4.48 27.3-13.8 38.87a3.78 3.78 0 0 0-.21.45l-5.26 3Zm-2.55-56.56 7.58 4.37A25.39 25.39 0 0 0 63 54.68c-5.64 2.19-9.47 2.13-12.36 1.26ZM34 79.36c.35.32.7.63 1 .91 2.28 1.94 4.08 3.47 4.08 9.42 0 1.42-.22 3.73-.44 6-.2 2-.38 3.83-.42 5.12v1.42L34 99.71Zm54.65 23a31.13 31.13 0 0 1 4.55-13.12v10.5Z"
+            ></path></g
+          ></svg
+        ></a
+      >
+    </h2>
+    <div class="internal-links">
+      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="/about">About</HeaderLink>
+    </div>
+  </nav>
 </header>
 <style>
-	header {
-		margin: 0;
-		padding: 0 1em;
-		background: white;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
-	}
+  header {
+    margin: 0;
+    padding: 0 1em;
+    background: white;
+    box-shadow: 0 2px 8px rgba(var(--black), 5%);
+  }
+  h2 {
+    margin: 0;
+    font-size: 1em;
+  }
 
-	h2 a,
-	h2 a.active {
-		text-decoration: none;
-	}
-	nav {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-	nav a {
-		padding: 1em 0.5em;
-		color: var(--black);
-		border-bottom: 4px solid transparent;
-		text-decoration: none;
-	}
-	nav a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
-	}
-	.social-links,
-	.social-links a {
-		display: flex;
-	}
-	@media (max-width: 720px) {
-		.social-links {
-			display: none;
-		}
-	}
+  h2 svg {
+    height: 3rem;
+  }
+
+  h2 a {
+    padding: 1rem;
+    display: block;
+  }
+
+  h2 a,
+  h2 a.active {
+    text-decoration: none;
+  }
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .internal-links {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) {
+    .internal-links {
+      margin-right: 0;
+    }
+  }
+  .internal-links a {
+    padding: 0.1em 0.5em;
+    color: var(--black);
+    border-bottom: 4px solid transparent;
+    text-decoration: none;
+  }
+  .internal-links a.active {
+    text-decoration: none;
+    border-bottom-color: var(--accent);
+  }
 </style>
