--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@ const today = new Date();
 ---
 
 <footer>
-  &copy; {today.getFullYear()} Leonhard Melzer. All rights reserved.
+  &copy; {today.getFullYear()} Leonhard Melzer. All rights reserved. <a
+    href="/legal/imprint">Imprint</a
+  >
   <div class="social-links">
     <a href="https://github.com/leomelzer" target="_blank">
       <span class="sr-only">Go to leomelzer's GitHub profile</span>
